--- a/buzzvel-project/src/output.css
+++ b/buzzvel-project/src/output.css
@@ -562,6 +562,10 @@ video {
   position: relative;
 }
 
+.left-1\/2 {
+  left: 50%;
+}
+
 .right-0 {
   right: 0px;
 }
@@ -570,80 +574,16 @@ video {
   top: 0px;
 }
 
-.top-20 {
-  top: 5rem;
-}
-
-.top-\[100px\] {
-  top: 100px;
+.top-\[120px\] {
+  top: 120px;
 }
 
 .top-\[200px\] {
   top: 200px;
 }
 
-.top-\[150px\] {
-  top: 150px;
-}
-
-.top-\[120px\] {
-  top: 120px;
-}
-
-.top-\[\] {
-  top: ;
-}
-
-.top-\[150\] {
-  top: 150;
-}
-
-.top-\[50px\] {
-  top: 50px;
-}
-
-.top-\[10px\] {
-  top: 10px;
-}
-
-.top-\[20px\] {
-  top: 20px;
-}
-
 .top-\[30px\] {
   top: 30px;
-}
-
-.right-1 {
-  right: 0.25rem;
-}
-
-.right-2 {
-  right: 0.5rem;
-}
-
-.-right-0 {
-  right: -0px;
-}
-
-.-right-2 {
-  right: -0.5rem;
-}
-
-.-right-10 {
-  right: -2.5rem;
-}
-
-.-right-5 {
-  right: -1.25rem;
-}
-
-.left-0 {
-  left: 0px;
-}
-
-.left-1\/2 {
-  left: 50%;
 }
 
 .z-0 {
@@ -658,8 +598,12 @@ video {
   margin: 0px;
 }
 
-.m-4 {
-  margin: 1rem;
+.m-2 {
+  margin: 0.5rem;
+}
+
+.m-5 {
+  margin: 1.25rem;
 }
 
 .mx-1 {
@@ -677,12 +621,18 @@ video {
   margin-bottom: 1rem;
 }
 
-.mb-12 {
-  margin-bottom: 3rem;
+.mx-5 {
+  margin-left: 1.25rem;
+  margin-right: 1.25rem;
 }
 
-.mb-4 {
-  margin-bottom: 1rem;
+.my-5 {
+  margin-top: 1.25rem;
+  margin-bottom: 1.25rem;
+}
+
+.mb-12 {
+  margin-bottom: 3rem;
 }
 
 .mb-6 {
@@ -701,6 +651,10 @@ video {
   margin-top: 0.25rem;
 }
 
+.mt-10 {
+  margin-top: 2.5rem;
+}
+
 .mt-5 {
   margin-top: 1.25rem;
 }
@@ -711,10 +665,6 @@ video {
 
 .mt-80 {
   margin-top: 20rem;
-}
-
-.mb-8 {
-  margin-bottom: 2rem;
 }
 
 .flex {
@@ -737,17 +687,8 @@ video {
   height: 64px;
 }
 
-.h-full {
-  height: 100%;
-}
-
-.h-fit {
-  height: -moz-fit-content;
-  height: fit-content;
-}
-
-.h-\[\] {
-  height: ;
+.h-auto {
+  height: auto;
 }
 
 .w-\[100px\] {
@@ -775,75 +716,8 @@ video {
   width: 100%;
 }
 
-.w-1 {
-  width: 0.25rem;
-}
-
-.w-2 {
-  width: 0.5rem;
-}
-
-.w-20 {
-  width: 5rem;
-}
-
-.w-\[12\] {
-  width: 12;
-}
-
-.w-\[125px\] {
-  width: 125px;
-}
-
-.max-w-7xl {
-  max-width: 80rem;
-}
-
-.max-w-4xl {
-  max-width: 56rem;
-}
-
-.max-w-2xl {
-  max-width: 42rem;
-}
-
-.max-w-40 {
-  max-width: 10rem;
-}
-
-.max-w-xl {
-  max-width: 36rem;
-}
-
-.max-w-fit {
-  max-width: -moz-fit-content;
-  max-width: fit-content;
-}
-
-.max-w-7 {
-  max-width: 1.75rem;
-}
-
-.max-w-6xl {
-  max-width: 72rem;
-}
-
-.max-w-5xl {
-  max-width: 64rem;
-}
-
 .-translate-x-1\/2 {
   --tw-translate-x: -50%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.rotate-180 {
-  --tw-rotate: 180deg;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.rotate-90 {
-  --tw-rotate: 90deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -857,6 +731,10 @@ video {
 
 .flex-col {
   flex-direction: column;
+}
+
+.flex-wrap {
+  flex-wrap: wrap;
 }
 
 .items-start {
@@ -883,12 +761,12 @@ video {
   justify-content: space-around;
 }
 
-.self-auto {
-  align-self: auto;
+.gap-6 {
+  gap: 1.5rem;
 }
 
-.self-center {
-  align-self: center;
+.gap-4 {
+  gap: 1rem;
 }
 
 .overflow-hidden {
@@ -942,12 +820,30 @@ video {
   padding-bottom: 20px;
 }
 
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
+.px-5 {
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+}
+
 .pb-2 {
   padding-bottom: 0.5rem;
 }
 
+.pb-72 {
+  padding-bottom: 18rem;
+}
+
 .pt-2 {
   padding-top: 0.5rem;
+}
+
+.pt-4 {
+  padding-top: 1rem;
 }
 
 .text-center {
@@ -975,6 +871,11 @@ video {
   line-height: 1.75rem;
 }
 
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+}
+
 .font-bold {
   font-weight: 700;
 }
@@ -997,6 +898,10 @@ video {
 
 .leading-\[50px\] {
   line-height: 50px;
+}
+
+.leading-tight {
+  line-height: 1.25;
 }
 
 .text-black {
@@ -1053,6 +958,10 @@ video {
   transition-duration: 300ms;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 .hover\:bg-purple:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(88 28 135 / var(--tw-bg-opacity));
@@ -1081,38 +990,6 @@ video {
 }
 
 @media (min-width: 768px) {
-  .md\:top-\[\] {
-    top: ;
-  }
-
-  .md\:top-0 {
-    top: 0px;
-  }
-
-  .md\:top-\[10px\] {
-    top: 10px;
-  }
-
-  .md\:right-0 {
-    right: 0px;
-  }
-
-  .md\:right-5 {
-    right: 1.25rem;
-  }
-
-  .md\:right-10 {
-    right: 2.5rem;
-  }
-
-  .md\:top-20 {
-    top: 5rem;
-  }
-
-  .md\:right-20 {
-    right: 5rem;
-  }
-
   .md\:top-60 {
     top: 15rem;
   }
@@ -1141,24 +1018,12 @@ video {
     display: flex;
   }
 
-  .md\:h-\[300px\] {
-    height: 300px;
-  }
-
-  .md\:h-\[3350px\] {
-    height: 3350px;
-  }
-
   .md\:h-\[350px\] {
     height: 350px;
   }
 
-  .md\:h-\[400px\] {
-    height: 400px;
-  }
-
-  .md\:w-\[125px\] {
-    width: 125px;
+  .md\:w-\[200px\] {
+    width: 200px;
   }
 
   .md\:w-\[350px\] {
@@ -1169,24 +1034,12 @@ video {
     width: 400px;
   }
 
-  .md\:w-\[200px\] {
-    width: 200px;
-  }
-
-  .md\:w-\[\] {
-    width: ;
-  }
-
   .md\:flex-row {
     flex-direction: row;
   }
 
   .md\:flex-col {
     flex-direction: column;
-  }
-
-  .md\:items-start {
-    align-items: flex-start;
   }
 
   .md\:items-center {
@@ -1213,8 +1066,16 @@ video {
     text-align: start;
   }
 
+  .md\:text-\[32px\] {
+    font-size: 32px;
+  }
+
   .md\:text-\[50px\] {
     font-size: 50px;
+  }
+
+  .md\:text-\[64px\] {
+    font-size: 64px;
   }
 
   .md\:text-xs {
@@ -1224,14 +1085,6 @@ video {
 }
 
 @media (min-width: 1024px) {
-  .lg\:right-0 {
-    right: 0px;
-  }
-
-  .lg\:top-80 {
-    top: 20rem;
-  }
-
   .lg\:top-60 {
     top: 15rem;
   }
@@ -1239,18 +1092,6 @@ video {
   .lg\:mx-14 {
     margin-left: 3.5rem;
     margin-right: 3.5rem;
-  }
-
-  .lg\:h-\[600px\] {
-    height: 600px;
-  }
-
-  .lg\:h-\[350px\] {
-    height: 350px;
-  }
-
-  .lg\:h-\[\] {
-    height: ;
   }
 
   .lg\:h-\[400px\] {
@@ -1261,28 +1102,24 @@ video {
     width: 300px;
   }
 
-  .lg\:w-\[673px\] {
-    width: 673px;
-  }
-
-  .lg\:w-\[\] {
-    width: ;
-  }
-
-  .lg\:w-\[600px\] {
-    width: 600px;
-  }
-
   .lg\:w-\[400px\] {
     width: 400px;
   }
 
-  .lg\:w-\[500px\] {
-    width: 500px;
+  .lg\:w-\[673px\] {
+    width: 673px;
+  }
+
+  .lg\:max-w-4xl {
+    max-width: 56rem;
   }
 
   .lg\:flex-row {
     flex-direction: row;
+  }
+
+  .lg\:items-center {
+    align-items: center;
   }
 
   .lg\:gap-4 {
@@ -1291,6 +1128,14 @@ video {
 
   .lg\:gap-\[24px\] {
     gap: 24px;
+  }
+
+  .lg\:text-\[36px\] {
+    font-size: 36px;
+  }
+
+  .lg\:text-\[72px\] {
+    font-size: 72px;
   }
 
   .lg\:text-lg {
