--- a/buzzvel-project/src/output.css
+++ b/buzzvel-project/src/output.css
@@ -637,17 +637,8 @@ video {
   margin-bottom: 2rem;
 }
 
-.my-4 {
-  margin-top: 1rem;
-  margin-bottom: 1rem;
-}
-
 .mb-12 {
   margin-bottom: 3rem;
-}
-
-.mb-4 {
-  margin-bottom: 1rem;
 }
 
 .mb-6 {
@@ -694,8 +685,24 @@ video {
   margin-top: 300px;
 }
 
-.mt-4 {
-  margin-top: 1rem;
+.mr-8 {
+  margin-right: 2rem;
+}
+
+.mr-40 {
+  margin-right: 10rem;
+}
+
+.ml-40 {
+  margin-left: 10rem;
+}
+
+.mr-6 {
+  margin-right: 1.5rem;
+}
+
+.mb-2 {
+  margin-bottom: 0.5rem;
 }
 
 .flex {
@@ -714,8 +721,8 @@ video {
   height: 250px;
 }
 
-.h-\[300px\] {
-  height: 300px;
+.h-\[359px\] {
+  height: 359px;
 }
 
 .h-\[64px\] {
@@ -729,18 +736,6 @@ video {
 .h-fit {
   height: -moz-fit-content;
   height: fit-content;
-}
-
-.h-\[\] {
-  height: ;
-}
-
-.h-\[400px\] {
-  height: 400px;
-}
-
-.w-1\/2 {
-  width: 50%;
 }
 
 .w-2\/5 {
@@ -759,6 +754,10 @@ video {
   width: 100px;
 }
 
+.w-\[280px\] {
+  width: 280px;
+}
+
 .w-\[300px\] {
   width: 300px;
 }
@@ -769,10 +768,6 @@ video {
 
 .w-\[307px\] {
   width: 307px;
-}
-
-.w-\[42px\] {
-  width: 42px;
 }
 
 .w-\[50px\] {
@@ -788,24 +783,12 @@ video {
   width: 100%;
 }
 
-.w-\[\] {
-  width: ;
+.w-3 {
+  width: 0.75rem;
 }
 
-.w-\[34p\] {
-  width: 34p;
-}
-
-.w-\[340px\] {
-  width: 340px;
-}
-
-.w-1 {
-  width: 0.25rem;
-}
-
-.w-auto {
-  width: auto;
+.w-\[280\] {
+  width: 280;
 }
 
 .-translate-x-1\/2 {
@@ -813,13 +796,12 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.rotate-180 {
-  --tw-rotate: 180deg;
+.transform {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.transform {
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+.resize {
+  resize: both;
 }
 
 .flex-row {
@@ -874,10 +856,6 @@ video {
   gap: 4rem;
 }
 
-.gap-2 {
-  gap: 0.5rem;
-}
-
 .gap-4 {
   gap: 1rem;
 }
@@ -886,12 +864,30 @@ video {
   gap: 1.5rem;
 }
 
-.gap-20 {
-  gap: 5rem;
+.gap-x-2 {
+  -moz-column-gap: 0.5rem;
+       column-gap: 0.5rem;
+}
+
+.gap-x-4 {
+  -moz-column-gap: 1rem;
+       column-gap: 1rem;
+}
+
+.overflow-auto {
+  overflow: auto;
 }
 
 .overflow-hidden {
   overflow: hidden;
+}
+
+.overflow-x-auto {
+  overflow-x: auto;
+}
+
+.overflow-x-hidden {
+  overflow-x: hidden;
 }
 
 .rounded-\[100px\] {
@@ -969,17 +965,12 @@ video {
   padding-bottom: 20px;
 }
 
-.px-2 {
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
-}
-
-.pb-2 {
-  padding-bottom: 0.5rem;
-}
-
 .pb-48 {
   padding-bottom: 12rem;
+}
+
+.pb-8 {
+  padding-bottom: 2rem;
 }
 
 .pt-2 {
@@ -992,6 +983,18 @@ video {
 
 .pt-4 {
   padding-top: 1rem;
+}
+
+.pr-6 {
+  padding-right: 1.5rem;
+}
+
+.pb-4 {
+  padding-bottom: 1rem;
+}
+
+.pl-4 {
+  padding-left: 1rem;
 }
 
 .text-center {
@@ -1109,8 +1112,18 @@ video {
   transition-duration: 150ms;
 }
 
+.transition-transform {
+  transition-property: transform;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
 .duration-300 {
   transition-duration: 300ms;
+}
+
+.duration-500 {
+  transition-duration: 500ms;
 }
 
 html {
@@ -1175,6 +1188,22 @@ html {
     margin-top: 500px;
   }
 
+  .md\:mr-6 {
+    margin-right: 1.5rem;
+  }
+
+  .md\:mb-8 {
+    margin-bottom: 2rem;
+  }
+
+  .md\:mb-10 {
+    margin-bottom: 2.5rem;
+  }
+
+  .md\:mb-20 {
+    margin-bottom: 5rem;
+  }
+
   .md\:block {
     display: block;
   }
@@ -1187,8 +1216,8 @@ html {
     height: 350px;
   }
 
-  .md\:h-\[400px\] {
-    height: 400px;
+  .md\:h-\[442px\] {
+    height: 442px;
   }
 
   .md\:w-4\/5 {
@@ -1197,6 +1226,10 @@ html {
 
   .md\:w-\[200px\] {
     width: 200px;
+  }
+
+  .md\:w-\[300px\] {
+    width: 300px;
   }
 
   .md\:w-\[350px\] {
@@ -1211,20 +1244,32 @@ html {
     width: 400px;
   }
 
-  .md\:w-1\/2 {
-    width: 50%;
-  }
-
-  .md\:w-3\/4 {
-    width: 75%;
-  }
-
   .md\:w-\[\] {
     width: ;
   }
 
-  .md\:w-\[320px\] {
-    width: 320px;
+  .md\:w-\[359px\] {
+    width: 359px;
+  }
+
+  .md\:w-\[480px\] {
+    width: 480px;
+  }
+
+  .md\:w-\[364px\] {
+    width: 364px;
+  }
+
+  .md\:w-\[380px\] {
+    width: 380px;
+  }
+
+  .md\:w-\[370px\] {
+    width: 370px;
+  }
+
+  .md\:w-\[310px\] {
+    width: 310px;
   }
 
   .md\:flex-row {
@@ -1321,6 +1366,14 @@ html {
 
   .lg\:w-\[673px\] {
     width: 673px;
+  }
+
+  .lg\:w-\[\] {
+    width: ;
+  }
+
+  .lg\:w-\[364px\] {
+    width: 364px;
   }
 
   .lg\:max-w-4xl {
