--- a/buzzvel-project/src/input.css
+++ b/buzzvel-project/src/input.css
@@ -7,4 +7,12 @@ html {
 
   font-family: 'Roboto';
   font-display: swap;
+
+  background-color: #fff;
+  color: #000;
+}
+
+html.dark {
+  background-color: #000;
+  color: #fff;
 }
