--- a/buzzvel-project/src/output.css
+++ b/buzzvel-project/src/output.css
@@ -827,6 +827,18 @@ video {
   cursor: pointer;
 }
 
+.cursor-auto {
+  cursor: auto;
+}
+
+.cursor-default {
+  cursor: default;
+}
+
+.cursor-text {
+  cursor: text;
+}
+
 .resize {
   resize: both;
 }
