--- a/src/output.css
+++ b/src/output.css
@@ -723,8 +723,8 @@ video {
   height: 40px;
 }
 
-.h-\[600px\] {
-  height: 600px;
+.h-\[500px\] {
+  height: 500px;
 }
 
 .h-\[64px\] {
@@ -968,16 +968,16 @@ video {
   padding-bottom: 20px;
 }
 
+.pb-10 {
+  padding-bottom: 2.5rem;
+}
+
 .pb-32 {
   padding-bottom: 8rem;
 }
 
 .pb-4 {
   padding-bottom: 1rem;
-}
-
-.pb-40 {
-  padding-bottom: 10rem;
 }
 
 .pl-4 {
@@ -1331,6 +1331,10 @@ body {
 
   .md\:pb-2\.5 {
     padding-bottom: 0.625rem;
+  }
+
+  .md\:pb-40 {
+    padding-bottom: 10rem;
   }
 
   .md\:text-start {
